logs/error.txt
pbraun@ubuntu2004-pab:~/_dev/typescript_learning_project_u12$ node server.ts
Debugger listening on ws://127.0.0.1:44827/b3323146-12d6-4e7f-ba20-70dd15a5cbc2
For help, see: https://nodejs.org/en/docs/inspector
Debugger attached.
/home/pbraun/_dev/typescript_learning_project_u12/server.ts:1
import * as http from 'http';
       ^

SyntaxError: Unexpected token *
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:831:12)
    at startup (internal/bootstrap/node.js:283:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:623:3)
Waiting for the debugger to disconnect...